fix overflow issue

--- a/src/Map.module.css
+++ b/src/Map.module.css
@@ -20,6 +20,7 @@
 
 .map :global .country:hover {
   fill: #3f51b5;
+  stroke: white !important;
 }
 
 .map h1 {
